--- a/src/css/nav.css
+++ b/src/css/nav.css
@@ -34,8 +34,7 @@
     flex: none;
     position: static;
     visibility: visible;
-    /* height: var(--nav-height--desktop); */
-    height: max-content;
+    height: var(--nav-height--desktop);
   }
 }
 
@@ -80,7 +79,12 @@
   overflow-y: scroll;
   overscroll-behavior: none;
   height: var(--nav-panel-menu-height);
+  /* display: none; */
 }
+
+/* .nav-panel-menu.is-active {
+  display: block;
+} */
 
 .nav-panel-menu.is-loading {
   visibility: hidden;
@@ -88,6 +92,10 @@
 
 .nav-panel-menu:not(.is-active) .nav-menu {
   opacity: 0.75;
+}
+
+.nav-panel-menu.is-hide {
+  display: none;
 }
 
 /* .nav-panel-menu:not(.is-active)::after {
@@ -131,7 +139,7 @@
 }
 
 .nav-menu h3.title {
-  color: var(--color-brand-primary);
+  color: var(--nav-heading-font-color);
   font-size: 0.9rem;
   font-weight: var(--body-font-weight-bold);
   margin: 0.15rem 0 0;
@@ -212,10 +220,7 @@
 .nav-panel-explore .context {
   font-size: calc(15 / var(--rem-base) * 1rem);
   flex-shrink: 0;
-  color: var(--color-brand-primary);
-
-
-  
+  color: var(--nav-muted-color);
   box-shadow: 0 -1px 0 var(--nav-panel-divider-color);
   padding: 0 0.5rem;
   display: flex;
@@ -233,13 +238,13 @@
   padding-right: 0.25rem;
 }
 
-.nav-panel-explore:not(:first-child) .context .version::after {
+/* .nav-panel-explore:not(:first-child) .context .version::after {
   content: "";
   background: url(../img/octicons-16.svg#view-chevron-down) no-repeat center right -0.15em / 1em 1em;
   filter: var(--nav-muted-icon-filter);
   padding-right: 1.25em;
   margin-right: -0.25rem;
-}
+} */
 
 .nav-panel-explore .components {
   line-height: 1.3;
@@ -263,6 +268,14 @@
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
+  flex-direction: column;
+}
+
+.nav-panel-explore .component-row {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  width: 100%;
 }
 
 .nav-panel-explore .component + .component {
@@ -309,11 +322,4 @@
   border-color: currentColor;
   opacity: 0.9;
   font-weight: var(--body-font-weight-bold);
-}
-
-@media screen and (min-width: 1024px) {
-  .nav-container {
-   
-    height: max-content;
-  }
 }
