remove versions, adjust the click behaviors and display version on the top right bar

--- a/src/partials/header-content.hbs
+++ b/src/partials/header-content.hbs
@@ -43,6 +43,16 @@
             </a>
           </div>
         </div>
+        <div class="navbar-item">
+          <span id="username" style="padding-right: 28px;color: #607d8b;"></span>
+          <span class="control">
+            <form method="POST" action="/signout">
+              <button class="button is-primary" type="submit" data-se="logout">
+                  Logout
+              </button>
+            </form>
+          </span>
+        </div>
     </div>
   </nav>
 </header>
