--- a/src/partials/article.hbs
+++ b/src/partials/article.hbs
@@ -1,4 +1,4 @@
-<article class="doc {{{page.component.name}}}">
+<article class="doc">
 {{#with page.title}}
 <h1 class="page">{{{this}}}</h1>
 {{/with}}
