--- a/src/partials/page-versions.hbs
+++ b/src/partials/page-versions.hbs
@@ -1,3 +1,4 @@
+{{#if page.versions}}
 {{#with page.versions}}
 <div class="page-versions">
   <button class="version-menu-toggle" title="Show other versions of page">{{@root.page.componentVersion.displayVersion}}</button>
@@ -10,3 +11,9 @@
   </div>
 </div>
 {{/with}}
+{{else}}
+<div class="page-versions xxxxxxxxxxxxxxxxxxxx">
+  <button class="version-menu-toggle" title="Show other versions of page">{{@root.page.componentVersion.displayVersion}}</button>
+</div>
+{{/if}}
+
