--- a/src/partials/toolbar.hbs
+++ b/src/partials/toolbar.hbs
@@ -1,7 +1,7 @@
 <div class="toolbar" role="navigation">
 {{> nav-toggle}}
   {{#with site.homeUrl}}
-  <a href="{{{relativize this}}}" class="home-link{{#if @root.page.home}} is-current{{/if}}" title="Home"></a>
+  <a href="{{{relativize this}}}" class="home-link{{#if @root.page.home}} is-current{{/if}}"></a>
   {{/with}}
 {{> breadcrumbs}}
 {{> page-versions}}
@@ -11,3 +11,4 @@
   <div class="edit-this-page"><a href="{{page.editUrl}}">Edit this Page</a></div>
   {{/if}}
 </div>
+
